<resources>
    <string name="app_name">Easy Resume </string>
    <string name="app_name2">Easy Resume Builder</string>
    <string name="Resume_folder">Resumes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="izaz">Enter Name</string>
    <string name="txt1_contents">Welcome To Easy Resume Builder</string>
    <string name="txt2_contents">Start With Your Profile Name</string>
    <string name="btnnext">Next</string>
    <string name="skip"><u>Skip</u></string>
    <string name="save">Save</string>
    <string name="degree">Degree or Certificate</string>
    <string name="uni">University or Institute</string>
    <string name="school">School or University</string>
    <string name="sch">School or College</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="result">Percentage or CGPA</string>
    <string name="PassingYear">Passing Year</string>
    <string name="completiondate">Completion Date</string>
    <string name="company">Organization</string>
    <string name="refrencefurneshed">References will be provided upon request..</string>
    <string name="position">Position</string>
    <string name="period">Duration</string>
    <string name="location">Location</string>
    <string name="salary">Salary</string>
    <string name="jobresponsibility">Job Responsibilities</string>
    <string name="clear">Clear</string>
    <string name="DLicence">Driving Licence</string>
    <string name="PassportNo">Passport No.</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="dob">D.o.B</string>
    <string name="address">Address</string>
    <string name="languages">Languages Known</string>
    <string name="langs">Languages</string>
    <string name="savelanguagesform">Save languages as A,B,C</string>
    <string name="contactno">Contact No.</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome to Resume Generator</string>
    <string name="start">Start by your Name</string>
    <string name="hintname">Name</string>
    <string name="ptitle">Project Title</string>
    <string name="pduration">Project Duration</string>
    <string name="role">Role</string>
    <string name="tsize">Team Size</string>
    <string name="expertise">Expertise</string>
    <string name="rdetails">Reference Details</string>
    <string name="addnewprofile">+ Add New Profile</string>
    <string name="text_moreapp">More Apps</string>
    <string name="text_website">Website</string>
    <string name="text_support">Support</string>
    <string name="pdetails">Personal Details</string>
    <string name="pdetailsG">Personal details page</string>
    <string name="uploadphoto">Upload Photo</string>
    <string name="educationdetails">Education Details</string>
    <string name="experiencedetails">Experience Details</string>
    <string name="projectdetails">Project Details</string>
    <string name="refrencedetails">Reference Details</string>
    <string name="otherdetails">Other Details</string>
    <string name="generateresume">Generate Resume</string>
    <string name="generateandshareresume">View and Share Resume</string>
    <string name="aboutus">About Us</string>
    <string name="profiles">Profiles</string>
    <string name="profiledetails">Profile Details</string>
    <string name="profile_added">Profile Added Successfully</string>
    <string name="add_more">+ Add New</string>
    <string name="logo">Logo</string>
    <string name="companies">Companies</string>
    <string name="organization">Organization</string>
    <string name="enter_languages">Please enter languages</string>
    <string name="enter_languages_english_franch_">Enter languages (English,French)</string>
    <string name="enter_email_id">Please enter email id</string>
    <string name="enter_cell_no">Please enter cell no</string>
    <string name="enter_your_address">Please enter your address</string>
    <string name="enter_your_birth_date">Please enter your birth date</string>
    <string name="enter_your_gender">Please enter your gender</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="passport_no">Please enter passport no</string>
    <string name="enter_driving_licence_no">Please enter driving licence no</string>
    <string name="projects">Projects</string>
    <string name="enter_degree_name">Please enter degree or certificate name</string>
    <string name="enter_school_name">Please enter school name</string>
    <string name="enter_universty_name">Please enter university name</string>
    <string name="enter_your_result">Please enter your result</string>
    <string name="enter_passing_year">Please enter passing year</string>
    <string name="enter_project_name">Please enter project name</string>
    <string name="enter_project_duration">Enter project duration</string>
    <string name="enter_your_role">Please enter your role</string>
    <string name="enter_team_size">Please enter team size</string>
    <string name="enter_your_expertise">Please enter your expertise</string>
    <string name="refrences">References</string>
    <string name="enter_company_name">Please enter Organization name</string>
    <string name="enter_your_position">Please enter your position</string>
    <string name="enter_service_period_in_company">Please enter service period in company</string>
    <string name="enter_company_location">Please enter organization location</string>
    <string name="enter_you_job_responsibility">Please enter you job responsibility</string>
    <string name="enter_your_salary">Please enter your salary</string>
    <string name="generate">Generate</string>
    <string name="enter_refree_name">Please enter Reference name</string>
    <string name="enter_refree_details">Please enter reference details</string>
    <string name="enter_refree_email">Please enter reference email or cell no</string>
    <string name="enter_refree_cell_no">Please enter reference cell no</string>
    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="reset">Reset</string>
    <string name="valid_profile_name">Profile must contain numbers and latters only</string>
    <string name="other_msg">Please fill atleast one of above fields</string>
    <string name="error_file">File cannot be created, Profile name either contain special characters or its too long</string>
    <string name="do_you_want_delete">Do you want to delete ?</string>
    <string name="yes_to_delete"> Do you really want to delete this profile?</string>
    <string name="yes_to_delete_edu"> Do you really want to delete this degree?</string>
    <string name="yes_to_delete_exp"> Do you really want to delete this company?</string>
    <string name="yes_to_delete_proj"> Do you really want to delete this project?</string>
    <string name="yes_to_delete_ref"> Do you really want to delete this reference?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="info_inserted">Information Inserted</string>
    <string name="info_updated">Information Updated</string>
    <string name="start_Date">Please Choose Start Date</string>
    <string name="End_Date">Please Choose End Date</string>
    <string name="resume_generated">Resume Generated</string>
    <string name="no_sdcard">No SD card present</string>
    <string name="no_application_for_pdf">No Application Available to View PDF</string>
    <string name="file_not_found">File not found</string>
    <string name="no_personal_info">No Personal Info:</string>
    <string name="refree_name">Reference Name</string>
    <string name="refree_contact">Reference Contact no</string>
    <string name="complete">Complete</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="name_is_empty">Please Enter Your Name</string>
    <string name="image_not_found">Image not found</string>
    <string name="image_updated">Image updated</string>
    <string name="select_image">Select image</string>
    <string name="Upload_Pictures_Option">Upload Picture Option</string>
    <string name="how_see_pic">Select option to upload picture for resume!</string>
    <string name="Gallery">Upload from gallery</string>
    <string name="Camera">Take picture from camera</string>
    <string name="cancled">Cancelled</string>
    <string name="no_extra">No extras to retrieve!</string>
    <string name="refreeemail">Reference Email</string>
    <string name="profiledeleted">Profile Deleted</string>
    <string name="highbday">Birthday can not be higher than current date</string>
    <string name="equalbday">Please correct your date of birth</string>
    <string name="highpassing">Passing year can not be higher than current date</string>
    <string name="please_wait">Please Wait</string>
    <string name="highstart">Start date is higher than current date</string>
    <string name="equalstart">Start date can not be current day</string>
    <string name="highend">End date is higher than current date</string>
    <string name="startgreaterthanend">Start date can not be greater than end date</string>
    <string name="startendequal">Start and end date can not be equal</string>
    <string name="nodata">No data to generate resume</string>
    <string name="generating">Generating Resume...</string>
    <string name="generatingforview">Generating resume to view...</string>
    <string name="No_app">Can not find image croping app</string>
    <string name="No_camera">Camera not present</string>
    <string name="sections">Sections</string>
    <string name="sectionsp">Sections Page</string>
    <string name="presentation_icon">Presentation Icon</string>
    <string name="tip_to_add_profile_photo">Tip to add profile photo</string>
    <string name="profile_name_page">Profile Name Page</string>
    <string name="profile_list_page">Profile List Page</string>
    <string name="project_details_page">Project Details Page</string>
    <string name="addproject_details_page">Add Project Details Page</string>
    <string name="reference_details_page">Reference Details Page</string>
    <string name="addreference_details_page">Add Reference Details Page</string>
    <string name="education_details_page">Education details page</string>
    <string name="experience_details_page">Experience details page</string>
    <string name="generate_resume_page">Generate resume page</string>
    <string name="upload_photo_page">Upload photo page</string>
    <string name="about_us_page">About us page</string>
    <string name="other_details_page">Other details page</string>
    <string name="serial_no">S.No</string>
    <string name="country_prompt">Select gender</string>
    <string name="prof_updated">Profile updated</string>
    <string name="make_selection">Make your selection</string>
    <string name="enter_duration">Please Enter Duration</string>
    <string-array name="country_arrays">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string name="share_via_email">Share via Email</string>
    <string name="date_format">Select Date Format</string>
    <string name="dd_mmm_yyyy">DD-MMM-YYYY</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="mm_dd_yyyy">MM-DD-YYYY</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="not_really">Not Really</string>
    <string name="enjoy_news">Enjoying Easy Resume Builder?</string>
</resources>