<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_blue"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/enjoy_news"
        android:textSize="14dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal|center_vertical"
        >
        </TextView>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        
        >
        <View 
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            ></View>
        
         <TextView 
        android:id="@+id/btnNo"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_alert"
        android:text="@string/not_really"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:layout_toLeftOf="@+id/view1"
        />
         
           <TextView 
        android:id="@+id/btnYes"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_alert_yes"
        android:layout_toRightOf="@+id/view1"
        android:layout_marginLeft="10dp"
        android:text="@string/yes"
         android:gravity="center"
        android:textColor="@color/app_blue"
        />
  
    </RelativeLayout>
    
    

</LinearLayout>
