<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:contentDescription="@string/profile_list_page"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/barheight"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bar"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageviewpersonal"
                android:layout_width="@dimen/imageviewheight_width"
                android:layout_height="@dimen/imageviewheight_width"
                android:contentDescription="@string/profiledetails"
                android:src="@drawable/person_ic_w" />

            <TextView
                android:id="@+id/textviewpersonal"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/profiledetails"
                android:textColor="@android:color/white"
                android:textSize="@dimen/bar_textsize" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Adda2"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/titlebar"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:cacheColorHint="@android:color/transparent"
                    android:scrollbarAlwaysDrawVerticalTrack="true" >
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addprofilelayout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/barheight"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/addprofile"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/selector_text_btn"
                    android:gravity="center"
                    android:minHeight="35dp"
                    android:text="@string/addnewprofile"
                    android:textColor="#a2a2a2"
                    android:textSize="@dimen/textView1_1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/barheighttitle"
            android:background="@drawable/sub_title"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textviewpersonal2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="8dp"
                android:gravity="left|center_vertical"
                android:text="@string/profiles"
                android:textColor="@android:color/white"
                android:textSize="@dimen/bar_textsize" />
        </LinearLayout>
    </RelativeLayout>

    <include
        android:id="@+id/adView"
        layout="@layout/adxml"
        android:visibility="gone" />

</RelativeLayout>